objects/Local_ERP_Loader__c.object
<CustomObject>
    <description>R3 - Object to hold the data which is used to do comparison with SAP data - (SAP data is compared with mapping table)</description>
    <fields>
        <fullName>Account_GUID__c</fullName>
        <description>R3 - Field GUID Account reference data</description>
        <label>Account GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ICVID__c</fullName>
        <description>Field ICVID Account reference data</description>
        <label>Account ICVID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_LocalCustomerID__c</fullName>
        <label>Alternative LocalCustomerID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_Organization__c</fullName>
        <label>Alternative Organization</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Class__c</fullName>
        <description>R3 Application Class</description>
        <label>Application Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_Description__c</fullName>
        <description>R3 Block Description</description>
        <label>Block Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R3 Customer Blocking Data Block</description>
        <label>Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_1__c</fullName>
        <description>R3 Business 1</description>
        <label>Business 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_2__c</fullName>
        <description>R3 Business 2</description>
        <label>Business 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_3__c</fullName>
        <description>R3 Business 3</description>
        <label>Business 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Class__c</fullName>
        <description>R3 Channel Class</description>
        <label>Channel Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>R3 - Country</description>
        <label>Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Information_Risk_class__c</fullName>
        <description>R3 Credit Information Risk class</description>
        <label>Risk Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Information__c</fullName>
        <description>R3 Credit Limit Information</description>
        <label>Credit Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Blocking_Data_Deletion_Flag__c</fullName>
        <description>R3 Customer Blocking Data Deletion Flag</description>
        <label>Customer Blocking Data Deletion Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_allocation__c</fullName>
        <description>R3 Customer allocation</description>
        <label>Customer allocation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Priority__c</fullName>
        <label>Delivery Priority</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_ID__c</fullName>
        <description>R3 - ERP ID</description>
        <label>ERP ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_LOD_Been_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if the LOD Batch Job has Processed this Local ERP Loader record.</description>
        <label>Has LOD Been Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_LOD_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has LOD Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDOC_Number__c</fullName>
        <label>IDOC Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_1__c</fullName>
        <label>Incoterms 1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_2__c</fullName>
        <label>Incoterms 2</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Usage__c</fullName>
        <description>R3 Industry Usage</description>
        <label>Industry Usage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOD_Errors__c</fullName>
        <description>To store and display the errors when we copy the data from Local ERP Loader to Local Operational Data.</description>
        <label>LOD Errors</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeadingBusinessPartnerSegment__c</fullName>
        <description>R3 LeadingBusinessPartnerSegment</description>
        <label>Leading Business Partner Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Channel__c</fullName>
        <description>R3 - Local Channel</description>
        <label>Local Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Customer_ID__c</fullName>
        <description>R3 - Local Customer ID</description>
        <label>Local Customer ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Main_Business__c</fullName>
        <description>R3 Local Main Business</description>
        <label>Local Main Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Segment__c</fullName>
        <description>R3 Local Segment</description>
        <label>Local Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode_of_Payment__c</fullName>
        <label>Mode of Payment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Distribution_Channel__c</fullName>
        <description>R3 - Distribution Channel</description>
        <label>SAP Distribution Channel</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Division__c</fullName>
        <description>R3 - field Division</description>
        <label>SAP Division</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Sales_Organization__c</fullName>
        <description>R3 - Sales Organization</description>
        <label>SAP Sales Organization</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <description>R3 Sales District</description>
        <label>Sales District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <label>Sales Group</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <description>R3 Sales Office</description>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person_1__c</fullName>
        <description>R3 - Sales Person 1</description>
        <label>Sales Person 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person_2__c</fullName>
        <description>R3 - Sales Person 2</description>
        <label>Sales Person 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person_3__c</fullName>
        <description>R3 - Sales Person</description>
        <label>Sales Person 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Conditions__c</fullName>
        <label>Shipping Conditions</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Instructions__c</fullName>
        <label>Shipping Instructions</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_of_Payment__c</fullName>
        <label>Terms of Payment</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Sales_Force__c</fullName>
        <description>R3 Type of Sales Force</description>
        <label>Type of Salesforce</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Account_Number__c</fullName>
        <label>X3rd Party Account Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Local ERP Loader</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_GUID__c</columns>
        <columns>ERP_ID__c</columns>
        <columns>SAP_Division__c</columns>
        <columns>SAP_Distribution_Channel__c</columns>
        <columns>SAP_Sales_Organization__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Armin_UK</fullName>
        <columns>NAME</columns>
        <columns>Account_GUID__c</columns>
        <columns>ERP_ID__c</columns>
        <columns>SAP_Division__c</columns>
        <columns>SAP_Distribution_Channel__c</columns>
        <columns>SAP_Sales_Organization__c</columns>
        <columns>Country__c</columns>
        <columns>LOD_Errors__c</columns>
        <columns>Has_LOD_Been_Processed__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Terms_of_Payment__c</columns>
        <filterScope>Everything</filterScope>
        <label>Armin</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Belgium</fullName>
        <columns>NAME</columns>
        <columns>Account_GUID__c</columns>
        <columns>Channel_Class__c</columns>
        <columns>Company_Code__c</columns>
        <columns>Country__c</columns>
        <columns>ERP_ID__c</columns>
        <columns>Has_LOD_Been_Processed__c</columns>
        <columns>Has_LOD_Errors__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Belgium</value>
        </filters>
        <label>Belgium</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Germany</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Germany</value>
        </filters>
        <label>Germany</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Netherlands</fullName>
        <columns>NAME</columns>
        <columns>Account_GUID__c</columns>
        <columns>Channel_Class__c</columns>
        <columns>Company_Code__c</columns>
        <columns>Country__c</columns>
        <columns>Has_LOD_Been_Processed__c</columns>
        <columns>Has_LOD_Errors__c</columns>
        <columns>SAP_Distribution_Channel__c</columns>
        <columns>SAP_Division__c</columns>
        <columns>SAP_Sales_Organization__c</columns>
        <columns>Shipping_Conditions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Netherlands</value>
        </filters>
        <label>Netherlands</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>United_Kingdom</fullName>
        <columns>NAME</columns>
        <columns>Account_GUID__c</columns>
        <columns>Channel_Class__c</columns>
        <columns>Company_Code__c</columns>
        <columns>Country__c</columns>
        <columns>Customer_allocation__c</columns>
        <columns>ERP_ID__c</columns>
        <columns>Has_LOD_Been_Processed__c</columns>
        <columns>Has_LOD_Errors__c</columns>
        <columns>LOD_Errors__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>United Kingdom</value>
        </filters>
        <label>United Kingdom</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ERP Data # - {0000000000}</displayFormat>
        <label>ERP Data Hold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Local ERP Loader</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Account_GUID_or_ICVID_is_Mandatory</fullName>
        <active>true</active>
        <description>This validation rule will ensure that either Guid or ICV-id exists, but not both</description>
        <errorConditionFormula>AND(
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
IF(OR(AND( ISBLANK(Account_GUID__c) , ISBLANK(Account_ICVID__c)),AND( NOT(ISBLANK(Account_GUID__c)) , NOT(ISBLANK(Account_ICVID__c)))),true,false)
)</errorConditionFormula>
        <errorMessage>Either Account GUID or Account ICVID must be provided</errorMessage>
    </validationRules>
</CustomObject>